<resources>
    <string name="app_name">ComputerStore</string>
    <string name="enter_mail">Nhập Email</string>
    <string name="enter_pass">Nhập mật khẩu</string>
    <string name="email">Email:</string>
    <string name="password">Mật khẩu:</string>
    <string name="re_enter_pass">Nhập lại mật khẩu:</string>
    <string name="login_button">Đăng nhập</string>
    <string name="lost_pass">Quên mật khẩu</string>
    <string name="no_account">Chưa có tài khoản ?  </string>
    <string name="register">Đăng Ký</string>
    <string name="account">Tài khoản</string>
    <string name="home">Trang chủ</string>
    <string name="category">Danh mục</string>
    <string name="cart">Giỏ hàng</string>
    <string name="notification">Thông báo</string>
    <string name="suggestion">Gợi ý</string>
    <string name="all_cate">Tất cả các danh mục</string>
    <string name="code_authentic">Mã xác thực</string>
    <string name="enter_authentic">Nhập mã xác thực</string>
    <string name="authentic">Xác thực</string>
    <string name="enter_mail_loss_pass">Nhập Email của tài khoản</string>
    <string name="auth_account">Xác thực tài khoản</string>
    <string name="mail_invalid">Định dạng mail không hợp lệ</string>
    <string name="must_enter_pass">Bạn phải nhập mật khẩu</string>
    <string name="must_enter_pass2">Bạn phải nhập mật khẩu lần 2</string>
    <string name="repass_not_equals_pass">Mật khẩu nhập lại không khớp</string>
    <string name="old_pass">Mật khẩu cũ:</string>
    <string name="enter_old_pass">Nhập Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới:</string>
    <string name="enter_new_pass">Nhập mật khẩu mới</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="text_more">Xem thêm</string>
    <string name="price">Giá tiền</string>
    <string name="discount">Khuyến mại còn</string>
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="thong_so">Thông số kĩ thuật</string>
    <string name="description">Mô tả sản phẩm</string>
    <string name="rut_gon">Thu gọn</string>
    <string name="quality">Số lượng</string>
    <string name="filter_search">Bộ lọc tìm kiếm</string>
    <string name="reset_filter">Thiết lập lại</string>
    <string name="ok_filter">Xác nhận</string>
    <string name="min_price">Tối thiểu</string>
    <string name="max_price">Tối đa</string>
    <string name="cate">Danh mục</string>
    <string name="manu">Thương Hiệu</string>
    <string name="status">Tình trạng</string>
    <string name="filter_price">Khoảng giá</string>
    <string name="max_to_min">Giá từ cao tới thấp</string>
    <string name="min_to_max">Giá từ thấp tới cao</string>
    <string name="a_to_z">Từ A đến Z</string>
    <string name="z_to_a">Từ Z đến A</string>
    <string name="status2">Trạng thái</string>
    <string name="value_cart">Giá trị đơn hàng</string>
    <string name="discount_1">Giảm giá</string>
    <string name="total">Tổng tiền</string>
    <string name="buy">Đặt hàng</string>
    <string name="want_login">Bạn có muốn đăng nhập</string>
    <string name="this_feature_in_develop">Chức năng đang phát triển</string>
    <string name="phone">Số điện thoại</string>
    <string name="enter_phone">Nhập SĐT</string>
    <string name="account_name">Tên tài khoản</string>
    <string name="enter_ttk">Nhập tên tài khoản</string>
    <string name="full_name">Họ và tên</string>
    <string name="enter_hvt">Nhập họ và tên</string>
    <string name="number_house">Số nhà, phường</string>
    <string name="enter_house">Nhập số nhà, phường</string>
    <string name="province">Tỉnh/Thành phố</string>
    <string name="district">Quận/Huyện</string>
    <string name="ward">Xã/Phường/Thị trấn</string>
    <string name="ten_tk">Bạn phải nhập tên tài khoản</string>
    <string name="ho_ten">Bạn phải nhập họ và tên</string>
    <string name="must_sdt">Định dạng số diện thoại không đúng</string>
</resources>