<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/dang_nhap_background"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:id="@+id/txt_name"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="Computer Store"
        android:layout_below="@id/logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/txt_mail"
        android:layout_marginStart="30dp"
        android:text="@string/email"
        android:layout_below="@id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:id="@+id/frame_mail"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:layout_below="@id/txt_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="@string/enter_mail"
            android:id="@+id/edt_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:background="@null"
            android:paddingStart="40dp"
            android:paddingEnd="10dp">
            <requestFocus />
        </EditText>
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/ic_mail_black_24" />
    </FrameLayout>

    <TextView
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/txt_pass1"
        android:layout_marginStart="30dp"
        android:text="@string/password"
        android:layout_below="@id/frame_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:id="@+id/frame_pass"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:layout_below="@id/txt_pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="@string/enter_pass"
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@null"
            android:paddingStart="40dp"
            android:paddingEnd="10dp">
        </EditText>
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/ic_lock_24" />
    </FrameLayout>
    <Button
        android:id="@+id/btn_login"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@android:color/white"
        android:background="@drawable/border_button"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/frame_pass"
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/lost_pass"
        android:id="@+id/lost_pass"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lost_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:id="@+id/no_account"
            android:text="@string/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/no_account"
            android:id="@+id/register"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</RelativeLayout>