<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/dang_ky_background"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePasswordActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txt_old_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="30dp"
        android:text="@string/old_pass"
        android:textSize="20sp" />
    <FrameLayout
        android:id="@+id/frame_old_pass"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:layout_below="@id/txt_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="@string/enter_old_pass"
            android:id="@+id/edt_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:background="@null"
            android:paddingStart="40dp"
            android:paddingEnd="10dp">

            <requestFocus />
        </EditText>
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/ic_lock_24" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt_pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_old_pass"
        android:layout_marginStart="30dp"
        android:text="@string/new_password"
        android:textSize="20sp" />
    <FrameLayout
        android:id="@+id/frame_pass"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:layout_below="@id/txt_pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="@string/enter_new_pass"
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@null"
            android:paddingStart="40dp"
            android:paddingEnd="10dp">

            <requestFocus />
        </EditText>
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/ic_lock_24" />
    </FrameLayout>
    <TextView
        android:textSize="20sp"
        android:id="@+id/txt_pass2"
        android:layout_marginStart="30dp"
        android:text="@string/re_enter_pass"
        android:layout_below="@id/frame_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:id="@+id/frame_pass2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:layout_below="@id/txt_pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="@string/enter_pass"
            android:id="@+id/edt_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@null"
            android:paddingStart="40dp"
            android:paddingEnd="10dp">
            <requestFocus />
        </EditText>
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/ic_lock_24" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_pass2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_button_blue"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/change_pass"
        android:textColor="@android:color/white" />
</RelativeLayout>